--- a/themes/Sakura/layout/_widget/common-article.ejs
+++ b/themes/Sakura/layout/_widget/common-article.ejs
@@ -22,7 +22,9 @@
         ·</span>
         <%= date(post.date, 'YYYY-M-D') %><span class="bull">
         ·</span>
-      <span id="busuanzi_value_page_pv"></span>次阅读</p>
+        <span id="<%- url_for(post.path||page.path)%>" class="leancloud_visitors">
+      <span class="leancloud-visitors-count"></span>次阅读</p>
+        </span>
     </header>
   </div>
 <% } %>
@@ -35,7 +37,9 @@
         <% if (!post.photos[0]){ %>
           <header class="entry-header">
             <h1 class="entry-title"><%- post.title %></h1>
-            <p class="entry-census"><%- post.author %>&nbsp;·&nbsp;<%= date(post.date, 'YYYY-M-D') %>&nbsp;·&nbsp;<span id="busuanzi_value_page_pv"></span>次阅读</p></p>
+            <p class="entry-census"><%- post.author %>&nbsp;·&nbsp;<%= date(post.date, 'YYYY-M-D') %>&nbsp;·&nbsp;<span id="<%- url_for(post.path||page.path)%>" class="leancloud_visitors">
+              <span class="leancloud-visitors-count"></span>次阅读
+                </span></p>
 
             <hr>
           </header>
