--- a/themes/Sakura/layout/links.ejs
+++ b/themes/Sakura/layout/links.ejs
@@ -11,24 +11,7 @@
 </div>
 <div id="content" class="site-content">
   <article class="post-item post-301 page type-page status-publish has-post-thumbnail hentry">
-    <p>
-    欢迎交换友链 ꉂ(ˊᗜˋ)</p>
-    <p>
-      请留言告诉我你的：<br>
-      1、名字<br>
-      2、一句话介绍（熟人我会亲自帮写的）<br>
-      3、主页地址<br>
-    4、头像（HTTPS*，可在评论区上传）</p>
-    <p>
-      For Example：<br>
-      ★ Name: hojun<br>
-      ★ Bio: 好少年光芒万丈<br>
-      ★ URL: https://www.hojun.cn<br>
-      ★ Avatar: <a href="https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/custom/avatar.jpg" target="_blank" rel="nofollow">
-      获取嵌入代码</a>
-    </p>
-    <p style="font-size: 13px">
-    ※ 为保证友链质量，今后新申请的友链将经过筛选，请在收到我的回复邮件后再于贵站添加本站链接。原则上过去已添加友链不会轻易删除，如遇死链、改变网站用途（友链主要针对的是同类的博客），将单独移至“阵亡将士”分类中，下次清理时未整改的将移除；如遇盗版、破解、网页植入挖矿脚本、极低质量内容、单方面移除本站链接，将直接移除，恕不另行通知。</p>
+    <%- page.description %>
     <% if (page.links) { %>
       <div class="links">
         <% (page.links||[]).forEach(function (group, index) { %>
