恢复“主题配置”工具

--- a/themes/Sakura/layout/layout.ejs
+++ b/themes/Sakura/layout/layout.ejs
@@ -20,6 +20,8 @@
       </div>
     </div>
   </section>
+  <%- partial('_partial/skin-list') %> 
+  <%- partial('_partial/skin-btn', null, {cache: !config.relative_link}) %>
   <%- partial('_partial/mheader', null, {cache: !config.relative_link}) %>
   <%- partial('_partial/aplayer', null, {cache: !config.relative_link}) %>
 </body>
