--- a/themes/Sakura/layout/_partial/footer.ejs
+++ b/themes/Sakura/layout/_partial/footer.ejs
@@ -34,6 +34,7 @@
 <script type="text/javascript" src="/js/zoom.min.js"></script>
 <script type="text/javascript" src="/js/sakura-app.js"></script>
 <script src='//unpkg.com/valine/dist/Valine.min.js'></script>
+<script data-pjax src='/js/artitalk.min.js'></script>
 <script src="/js/botui.js"></script>
 <script type="text/javascript">
 /* <![CDATA[ */
