--- a/themes/Sakura/layout/_partial/footer.ejs
+++ b/themes/Sakura/layout/_partial/footer.ejs
@@ -13,29 +13,29 @@
   <div class="site-info">
     <div class="footertext">
       <div class="img-preload">
-        <img src="https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/wordpress-rotating-ball-o.svg">
-        <img src="https://cdn.jsdelivr.net/gh/honjun/cdn@1.6/img/other/disqus-preloader.svg">
+        <img src="//cdn.jsdelivr.net/gh/amtoaer/cdn@master/img/other/wordpress-rotating-ball-o.svg">
+        <img src="//cdn.jsdelivr.net/gh/amtoaer/cdn@master/img/other/disqus-preloader.svg">
       </div>
       <p style="color: #666666;">&copy 2018</p>
     </div>
     <div class="footer-device">
     <p style="font-family: 'Ubuntu', sans-serif;">
-        <span style="color: #b9b9b9;">Theme <a href="https://github.com/honjun/hexo-theme-sakura" target="_blank" style="color: #b9b9b9;;text-decoration: underline dotted rgba(0, 0, 0, .1);">Sakura</a> <i class="iconfont icon-sakura rotating" style="color: #ffc0cb;display:inline-block"></i> by <a href="https://2heng.xin/" target="_blank" style="color: #b9b9b9;;text-decoration: underline dotted rgba(0, 0, 0, .1);">Mashiro</a>&<a href="https://www.hojun.cn/" target="_blank" style="color: #b9b9b9;;text-decoration: underline dotted rgba(0, 0, 0, .1);">Hojun</a>, Powered by Hexo, Hosted by Coding Pages</a>
+        <span style="color: #b9b9b9;">Theme <a href="https://github.com/honjun/hexo-theme-sakura" target="_blank" style="color: #b9b9b9;;text-decoration: underline dotted rgba(0, 0, 0, .1);">Sakura</a> <i class="iconfont icon-sakura rotating" style="color: #ffc0cb;display:inline-block"></i> by <a href="https://2heng.xin/" target="_blank" style="color: #b9b9b9;;text-decoration: underline dotted rgba(0, 0, 0, .1);">Mashiro</a>&<a href="https://www.hojun.cn/" target="_blank" style="color: #b9b9b9;;text-decoration: underline dotted rgba(0, 0, 0, .1);">Hojun</a>, Powered by Hexo, Hosted by Github Pages</a>
         </span>
       </p>
     </div>
   </div><!-- .site-info -->
 </footer>
 
-<script type="text/javascript" src="/js/lib.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js"></script>
-<script type="text/javascript" src="/js/InsightSearch.js"></script>
-<script type="text/javascript" src="/js/jquery.fancybox.min.js"></script>
-<script type="text/javascript" src="/js/zoom.min.js"></script>
-<script type="text/javascript" src="/js/sakura-app.js"></script>
-<script src='//unpkg.com/valine/dist/Valine.min.js'></script>
-<script data-pjax src='/js/artitalk.min.js'></script>
-<script src="/js/botui.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/js/lib.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/js/InsightSearch.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/js/jquery.fancybox.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/js/zoom.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/js/sakura-app.js"></script>
+<script src='//cdn.jsdelivr.net/npm/valine@1.4.14/dist/Valine.min.js'></script>
+<script data-pjax src='//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/js/artitalk.min.js'></script>
+<script src="//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/js/botui.js"></script>
 <script type="text/javascript">
 /* <![CDATA[ */
 if (/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
