暂且替换回原始链接，使用hexo-all-minifier压缩资源

--- a/themes/Sakura/layout/_widget/common-article.ejs
+++ b/themes/Sakura/layout/_widget/common-article.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/css/sharejs.css">
+<link rel="stylesheet" type="text/css" href="/css/sharejs.css">
 <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/tocbot@4.4.2/dist/tocbot.css">
 <div class="pattern-center-blank"></div>
 <% if (post.photos && post.photos.length){ %>
