--- a/themes/Sakura/layout/_partial/footer.ejs
+++ b/themes/Sakura/layout/_partial/footer.ejs
@@ -27,15 +27,15 @@
   </div><!-- .site-info -->
 </footer>
 
-<script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/js/lib.min.js"></script>
+<script type="text/javascript" src="/js/lib.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/js/InsightSearch.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/js/jquery.fancybox.min.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/js/zoom.min.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/js/sakura-app.js"></script>
+<script type="text/javascript" src="/js/InsightSearch.js"></script>
+<script type="text/javascript" src="/js/jquery.fancybox.min.js"></script>
+<script type="text/javascript" src="/js/zoom.min.js"></script>
+<script type="text/javascript" src="/js/sakura-app.js"></script>
 <script src='//cdn.jsdelivr.net/npm/valine@1.4.14/dist/Valine.min.js'></script>
-<script data-pjax src='//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/js/artitalk.min.js'></script>
-<script src="//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/js/botui.js"></script>
+<script data-pjax src='/js/artitalk.min.js'></script>
+<script src="/js/botui.js"></script>
 <script type="text/javascript">
 /* <![CDATA[ */
 if (/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
