--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -27,13 +27,13 @@
   <meta http-equiv="x-dns-prefetch-control" content="on">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+SerifMerriweather|Merriweather+Sans|Source+Code+Pro|Ubuntu:400,700|Noto+Serif+SC" media="all">
   <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
-  <link rel="stylesheet" id="saukra_css-css" href="//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/css/style.css" type="text/css" media="all">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/css/lib.min.css" media="all">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/css/font.css" media="all">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/css/insight.css" media="all">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/css/jquery.fancybox.min.css" media="all">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/css/zoom.css" media="all">
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/amtoaer/allwens.work@gh-pages/css/sharejs.css">
+  <link rel="stylesheet" id="saukra_css-css" href="/css/style.css" type="text/css" media="all">
+  <link rel="stylesheet" href="/css/lib.min.css" media="all">
+  <link rel="stylesheet" href="/css/font.css" media="all">
+  <link rel="stylesheet" href="/css/insight.css" media="all">
+  <link rel="stylesheet" href="/css/jquery.fancybox.min.css" media="all">
+  <link rel="stylesheet" href="/css/zoom.css" media="all">
+  <link rel="stylesheet" type="text/css" href="/css/sharejs.css">
 <!--   <link rel="stylesheet" id="saukra_css-css" href="https://2heng.xin/wp-content/cache/autoptimize/css/autoptimize_ad42a61f4c7d4bdd9f91afcff6b5dda5.css
 " type="text/css" media="all"> -->
   <script>
