--- a/themes/Sakura/layout/_widget/category-items.ejs
+++ b/themes/Sakura/layout/_widget/category-items.ejs
@@ -6,7 +6,7 @@
           <i class="iconfont icon-text">
           </i>
         </div>
-        <img width="150" height="150" src="<%= post.photos[0] %>" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="" >
+        <img width="150" height="150" src="<%= (theme.cdn || '') + post.photos[0] %>" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="" >
       </a>
     </div>
     <h1 class="entry-title">
