--- a/themes/Sakura/layout/_widget/common-article.ejs
+++ b/themes/Sakura/layout/_widget/common-article.ejs
@@ -89,9 +89,9 @@
             <% } %>
             <a href="<%- url_for(post.prev.path) %>" rel="prev">
               <div class="background">
-                <img class="lazyload" src="<%- theme.lazyloadImg%>" data-src="<%- post.prev.photos[0]%>"
+                <img class="lazyload" src="<%- theme.lazyloadImg%>" data-src="<%- (theme.cdn||'') + post.prev.photos[0]%>"
                   style="width: 100%; height: 100%; object-fit: cover; pointer-events: none;" onerror="imgError(this,3)"
-                  src="<%- post.prev.photos[0]%>">
+                  src="<%- (theme.cdn||'') + post.prev.photos[0]%>">
               </div>
               <span class="label">
                 Previous Post</span>
@@ -111,9 +111,9 @@
               <% } %>
               <a href="<%- url_for(post.next.path) %>" rel="next">
                 <div class="background">
-                  <img class="lazyload" src="<%- theme.lazyloadImg%>" data-src="<%- post.next.photos[0]%>"
+                  <img class="lazyload" src="<%- theme.lazyloadImg%>" data-src="<%- (theme.cdn||'') + post.next.photos[0]%>"
                     style="width: 100%; height: 100%; object-fit: cover; pointer-events: none;"
-                    onerror="imgError(this,3)" src="<%- post.next.photos[0]%>">
+                    onerror="imgError(this,3)" src="<%- (theme.cdn||'') + post.next.photos[0]%>">
                 </div>
                 <span class="label">
                   Next Post</span>
@@ -129,17 +129,17 @@
       <%- partial('_partial/comment') %>
       <section class="author-profile">
         <div class="info" itemprop="author" itemscope="" itemtype="https://schema.org/Person">
-          <a href="<%- post.authorLink %>" class="profile gravatar"><img src="<%- post.avatar%>" itemprop="image"
-              alt="<%- post.author %>" height="70" width="70"></a>
+          <a href="<%- post.authorLink || theme.authorLink %>" class="profile gravatar"><img src="<%- (theme.cdn||'')+(post.avatar||theme.avatar) %>" itemprop="image"
+              alt="<%- post.author || theme.author %>" height="70" width="70"></a>
           <div class="meta">
             <span class="title">Author</span>
             <h3 itemprop="name">
-              <a href="<%- post.authorLink%>" itemprop="url" rel="author"><%- post.author %></a>
+              <a href="<%- post.authorLink || theme.authorLink %>" itemprop="url" rel="author"><%- post.author || theme.author %></a>
             </h3>
           </div>
         </div>
         <hr>
-        <p><i class="iconfont icon-write"></i><%- post.authorAbout%></p>
+        <p><i class="iconfont icon-write"></i><%- post.authorAbout || theme.authorAbout%></p>
       </section>
     </main><!-- #main -->
   </div><!-- #primary -->
