--- a/themes/Sakura/layout/bangumi.ejs
+++ b/themes/Sakura/layout/bangumi.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/bangumi.css">
+<link rel="stylesheet" href="//cdn.jsdelivr.net/gh/amtoaer/blog-cdn@2.1/css/bangumi.css">
 <div class="pattern-center-blank"></div>
 <div id="content" class="site-content">
   <article class="post-item post-301 page type-page status-publish has-post-thumbnail hentry">
