--- a/themes/Sakura/layout/donate.ejs
+++ b/themes/Sakura/layout/donate.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/donate.css">
+<link rel="stylesheet" href="//cdn.jsdelivr.net/gh/amtoaer/blog-cdn@2.1/css/donate.css">
 <div class="pattern-center-blank">
 </div>
 <div class="pattern-center ">
