--- a/themes/Sakura/layout/_widget/common-page.ejs
+++ b/themes/Sakura/layout/_widget/common-page.ejs
@@ -2,7 +2,7 @@
   <% if (post.photos && post.photos.length){ %>
     <div class="pattern-center ">
       <div class="pattern-attachment-img">
-        <img src="<%- theme.lazyloadImg%>" data-src="<%= post.photos %>" class="lazyload" onerror="imgError(this,3)" style="width: 100%; height: 100%; object-fit: cover; pointer-events: none;">
+        <img src="<%- theme.lazyloadImg%>" data-src="<%= (theme.cdn || '') + post.photos %>" class="lazyload" onerror="imgError(this,3)" style="width: 100%; height: 100%; object-fit: cover; pointer-events: none;">
       </div>
       <header class="pattern-header ">
         <h1 class="entry-title">
