--- a/themes/Sakura/layout/links.ejs
+++ b/themes/Sakura/layout/links.ejs
@@ -2,7 +2,7 @@
 </div>
 <div class="pattern-center ">
   <div class="pattern-attachment-img">
-    <img src="<%= page.photos %>" src="<%- theme.lazyloadImg %>" data-src="<%= page.photos %>" class="lazyload" onerror="imgError(this,3)" style="width: 100%; height: 100%; object-fit: cover; pointer-events: none;">
+    <img src="<%= page.photos %>" src="<%- theme.lazyloadImg %>" data-src="<%= (theme.cdn || '') + page.photos %>" class="lazyload" onerror="imgError(this,3)" style="width: 100%; height: 100%; object-fit: cover; pointer-events: none;">
   </div>
   <header class="pattern-header ">
     <h1 class="entry-title">
