--- a/themes/Sakura/layout/layout.ejs
+++ b/themes/Sakura/layout/layout.ejs
@@ -1,5 +1,7 @@
 <%- partial('_partial/head') %>
-<body class="page-template page-template-user page-template-page-analytics page-template-userpage-analytics-php page page-id-1297 chinese-font serif isWebKit">
+
+<body
+  class="page-template page-template-user page-template-page-analytics page-template-userpage-analytics-php page page-id-1297 chinese-font serif isWebKit">
   <div class="scrollbar" id="bar">
   </div>
   <a href="#" class="cd-top faa-float animated"></a>
@@ -8,7 +10,7 @@
     <div id="page" class="site wrapper">
       <%- partial('_partial/header', null, {cache: !config.relative_link}) %>
       <%- body %>
-    </div>    
+    </div>
     <%- partial('_widget/search/insight') %>
     <%- partial('_partial/footer', null, {cache: !config.relative_link}) %>
     <div class="openNav no-select" style="height: 50px;">
@@ -20,9 +22,9 @@
       </div>
     </div>
   </section>
-  <%- partial('_partial/skin-list') %> 
+  <%- partial('_partial/skin-list') %>
   <%- partial('_partial/skin-btn', null, {cache: !config.relative_link}) %>
   <%- partial('_partial/mheader', null, {cache: !config.relative_link}) %>
-  <%- partial('_partial/aplayer', null, {cache: !config.relative_link}) %>
 </body>
+
 </html>
