初步迁移静态资源加载地址

--- a/themes/Sakura/layout/_partial/footer.ejs
+++ b/themes/Sakura/layout/_partial/footer.ejs
@@ -13,43 +13,50 @@
   <div class="site-info">
     <div class="footertext">
       <div class="img-preload">
-        <img src="//cdn.jsdelivr.net/gh/amtoaer/cdn@master/img/other/wordpress-rotating-ball-o.svg">
-        <img src="//cdn.jsdelivr.net/gh/amtoaer/cdn@master/img/other/disqus-preloader.svg">
+        <img src="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/img/other/wordpress-rotating-ball-o.svg">
+        <img src="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/img/other/disqus-preloader.svg">
       </div>
       <p style="color: #666666;">&copy 2018</p>
     </div>
     <div class="footer-device">
-    <p style="font-family: 'Ubuntu', sans-serif;">
-        <span style="color: #b9b9b9;">Theme <a href="https://github.com/honjun/hexo-theme-sakura" target="_blank" style="color: #b9b9b9;;text-decoration: underline dotted rgba(0, 0, 0, .1);">Sakura</a> <i class="iconfont icon-sakura rotating" style="color: #ffc0cb;display:inline-block"></i> by <a href="https://2heng.xin/" target="_blank" style="color: #b9b9b9;;text-decoration: underline dotted rgba(0, 0, 0, .1);">Mashiro</a>&<a href="https://www.hojun.cn/" target="_blank" style="color: #b9b9b9;;text-decoration: underline dotted rgba(0, 0, 0, .1);">Hojun</a>, Powered by Hexo, Hosted by Vercel</a>
+      <p style="font-family: 'Ubuntu', sans-serif;">
+        <span style="color: #b9b9b9;">Theme <a href="https://github.com/honjun/hexo-theme-sakura" target="_blank"
+            style="color: #b9b9b9;;text-decoration: underline dotted rgba(0, 0, 0, .1);">Sakura</a> <i
+            class="iconfont icon-sakura rotating" style="color: #ffc0cb;display:inline-block"></i> by <a
+            href="https://2heng.xin/" target="_blank"
+            style="color: #b9b9b9;;text-decoration: underline dotted rgba(0, 0, 0, .1);">Mashiro</a>&<a
+            href="https://www.hojun.cn/" target="_blank"
+            style="color: #b9b9b9;;text-decoration: underline dotted rgba(0, 0, 0, .1);">Hojun</a>, Powered by Hexo,
+          Hosted by Vercel</a>
         </span>
       </p>
     </div>
   </div><!-- .site-info -->
 </footer>
 
-<script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/blog-cdn@2.1/js/lib.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/js/lib.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/blog-cdn@2.1/js/InsightSearch.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/blog-cdn@2.1/js/jquery.fancybox.min.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/blog-cdn@2.1/js/sakura-app.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/js/InsightSearch.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/js/jquery.fancybox.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/js/sakura-app.js"></script>
 <script src='//cdn.jsdelivr.net/npm/valine@1.4.14/dist/Valine.min.js'></script>
-<script data-pjax src='//cdn.jsdelivr.net/gh/amtoaer/blog-cdn@2.1/js/artitalk.min.js'></script>
-<script src="//cdn.jsdelivr.net/gh/amtoaer/blog-cdn@2.1/js/botui.min.js"></script>
+<script data-pjax src='//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/js/artitalk.min.js'></script>
+<script src="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/js/botui.min.js"></script>
 <script type="text/javascript">
-/* <![CDATA[ */
-if (/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
-  var Poi = {"pjax":"<%- theme.pjax %>","movies":{"url": "<%- theme.movies.url %>","name":"<%- theme.movies.name%>","live":"close"},"windowheight":"fixed","codelamp":"close","ajaxurl":"","order":"asc","formpostion":"bottom"};
-} else {
-  var Poi = {"pjax":"<%- theme.pjax %>","movies":{"url": "<%- theme.movies.url %>","name":"<%- theme.movies.name%>","live":"open"},"windowheight":"auto","codelamp":"close","ajaxurl":"","order":"asc","formpostion":"bottom"};
-}
+  /* <![CDATA[ */
+  if (/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
+    var Poi = { "pjax": "<%- theme.pjax %>", "movies": { "url": "<%- theme.movies.url %>", "name": "<%- theme.movies.name%>", "live": "close" }, "windowheight": "fixed", "codelamp": "close", "ajaxurl": "", "order": "asc", "formpostion": "bottom" };
+  } else {
+    var Poi = { "pjax": "<%- theme.pjax %>", "movies": { "url": "<%- theme.movies.url %>", "name": "<%- theme.movies.name%>", "live": "open" }, "windowheight": "auto", "codelamp": "close", "ajaxurl": "", "order": "asc", "formpostion": "bottom" };
+  }
 /* ]]> */
 
 </script>
 <script>
-$(document).ready(function() {
-  if ($(".toc").length > 0 && document.body.clientWidth > 1200) {
-    if ($(".pattern-center").length > 0) { //有图的情况
-      tocbot.init({
+  $(document).ready(function () {
+    if ($(".toc").length > 0 && document.body.clientWidth > 1200) {
+      if ($(".pattern-center").length > 0) { //有图的情况
+        tocbot.init({
           // Where to render the table of contents.
           tocSelector: '.toc', // 放置目录的容器
           // Where to grab the headings to build the table of contents.
@@ -59,9 +66,9 @@ $(document).ready(function() {
           headingSelector: 'h1, h2, h3, h4, h5', // 需要索引的标题级别
           headingsOffset: -400,
           scrollSmoothOffset: -85
-      });
-    } else {
-      tocbot.init({
+        });
+      } else {
+        tocbot.init({
           // Where to render the table of contents.
           tocSelector: '.toc', // 放置目录的容器
           // Where to grab the headings to build the table of contents.
@@ -71,17 +78,17 @@ $(document).ready(function() {
           headingSelector: 'h1, h2, h3, h4, h5', // 需要索引的标题级别
           headingsOffset: -85,
           scrollSmoothOffset: -85
-      });
-    }
-    var offsetTop = $('.toc').offset().top - 95;
-    window.onscroll = function() {
-      var scrollTop = window.pageYOffset || document.documentElement.scrollTop || document.body.scrollTop;
-      if (scrollTop >= offsetTop) {
-        $('.toc').addClass('toc-fixed');
-      } else {
-        $('.toc').removeClass('toc-fixed');
+        });
+      }
+      var offsetTop = $('.toc').offset().top - 95;
+      window.onscroll = function () {
+        var scrollTop = window.pageYOffset || document.documentElement.scrollTop || document.body.scrollTop;
+        if (scrollTop >= offsetTop) {
+          $('.toc').addClass('toc-fixed');
+        } else {
+          $('.toc').removeClass('toc-fixed');
+        }
       }
     }
-  }
-});
+  });
 </script>
