--- a/themes/Sakura/layout/_widget/common-article.ejs
+++ b/themes/Sakura/layout/_widget/common-article.ejs
@@ -21,11 +21,11 @@
       </span>
       <span class="bull">
         ·</span>
-        <i class="fa fa-calendar">&nbsp;&nbsp;</i>
+      <i class="fa fa-calendar">&nbsp;&nbsp;</i>
       <%= date(post.date, 'YYYY-M-D') %>
       <span class="bull">
         ·</span>
-        <i class="fa fa-eye">&nbsp;&nbsp;</i>
+      <i class="fa fa-eye">&nbsp;&nbsp;</i>
       <span id="<%- url_for(post.path||page.path)%>" class="leancloud_visitors">
         <span class="leancloud-visitors-count"></span>次阅读</p>
     </span>
@@ -89,7 +89,8 @@
             <% } %>
             <a href="<%- url_for(post.prev.path) %>" rel="prev">
               <div class="background">
-                <img class="lazyload" src="<%- theme.lazyloadImg%>" data-src="<%- (theme.cdn||'') + post.prev.photos[0]%>"
+                <img class="lazyload" src="<%- theme.lazyloadImg%>"
+                  data-src="<%- (theme.cdn||'') + post.prev.photos[0]%>"
                   style="width: 100%; height: 100%; object-fit: cover; pointer-events: none;" onerror="imgError(this,3)"
                   src="<%- (theme.cdn||'') + post.prev.photos[0]%>">
               </div>
@@ -111,7 +112,8 @@
               <% } %>
               <a href="<%- url_for(post.next.path) %>" rel="next">
                 <div class="background">
-                  <img class="lazyload" src="<%- theme.lazyloadImg%>" data-src="<%- (theme.cdn||'') + post.next.photos[0]%>"
+                  <img class="lazyload" src="<%- theme.lazyloadImg%>"
+                    data-src="<%- (theme.cdn||'') + post.next.photos[0]%>"
                     style="width: 100%; height: 100%; object-fit: cover; pointer-events: none;"
                     onerror="imgError(this,3)" src="<%- (theme.cdn||'') + post.next.photos[0]%>">
                 </div>
@@ -129,12 +131,14 @@
       <%- partial('_partial/comment') %>
       <section class="author-profile">
         <div class="info" itemprop="author" itemscope="" itemtype="https://schema.org/Person">
-          <a href="<%- post.authorLink || theme.authorLink %>" class="profile gravatar"><img src="<%- (theme.cdn||'')+(post.avatar||theme.avatar) %>" itemprop="image"
+          <a href="<%- post.authorLink || theme.authorLink %>" class="profile gravatar"><img
+              src="<%- (theme.cdn||'')+(post.avatar||theme.avatar) %>" itemprop="image"
               alt="<%- post.author || theme.author %>" height="70" width="70"></a>
           <div class="meta">
             <span class="title">Author</span>
             <h3 itemprop="name">
-              <a href="<%- post.authorLink || theme.authorLink %>" itemprop="url" rel="author"><%- post.author || theme.author %></a>
+              <a href="<%- post.authorLink || theme.authorLink %>" itemprop="url"
+                rel="author"><%- post.author || theme.author %></a>
             </h3>
           </div>
         </div>
@@ -146,8 +150,7 @@
 </div>
 
 <% if (post.mathjax) { %>
-<script type="text/javascript"
-  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=TeX-MML-AM_CHTML"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/npm/mathjax@2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
   </script>
