--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -37,6 +37,8 @@
   <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/css/insight.css" media="all">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/css/jquery.fancybox.min.css" media="all">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/css/sharejs.css">
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/css/outdate.css">
+  <script src="//cdn.jsdelivr.net/npm/moment@2.28.0/moment.min.js"></script>
   <!--   <link rel="stylesheet" id="saukra_css-css" href="https://2heng.xin/wp-content/cache/autoptimize/css/autoptimize_ad42a61f4c7d4bdd9f91afcff6b5dda5.css
 " type="text/css" media="all"> -->
   <script>
