尝试为代码使用jetbrains mono字体

--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -26,12 +26,13 @@
   <link rel="shortcut icon" href="<%- theme.favicon %>">
   <% } %>
   <meta http-equiv="x-dns-prefetch-control" content="on">
+  <!--
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Noto+SerifMerriweather|Merriweather+Sans|Source+Code+Pro|Ubuntu:400,700|Noto+Serif+SC"
     media="all">
+  -->
   <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
-  <link rel="stylesheet" id="saukra_css-css" href="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/css/style.css"
-    type="text/css" media="all">
+  <link rel="stylesheet" id="saukra_css-css" href="/css/style.css" type="text/css" media="all">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/css/lib.min.css" media="all">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/css/font.css" media="all">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/css/insight.css" media="all">
