--- a/themes/Sakura/layout/_partial/footer.ejs
+++ b/themes/Sakura/layout/_partial/footer.ejs
@@ -34,13 +34,12 @@
   </div><!-- .site-info -->
 </footer>
 
-<script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/js/lib.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/blogcdn2@master/js/lib.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/js/InsightSearch.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/js/jquery.fancybox.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/gh/amtoaer/blogcdn2@master/js/sakura-app.js"></script>
 <script src='//cdn.jsdelivr.net/npm/valine@1.4.14/dist/Valine.min.js'></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/artitalk"></script>
 <script src="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/js/botui.min.js"></script>
 <script src="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/js/zoom.js"></script>
 <!-- valine评论定位 -->
