修复artitalk的加载问题

--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -36,6 +36,7 @@
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/css/sharejs.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/css/outdate.css">
   <script src="//cdn.jsdelivr.net/npm/moment@2.28.0/moment.min.js"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/artitalk"></script>
   <script>
     /*Initial Variables*/
     var mashiro_option = new Object();
