--- a/themes/Sakura/layout/_partial/comment.ejs
+++ b/themes/Sakura/layout/_partial/comment.ejs
@@ -9,6 +9,7 @@
         appKey: "<%= theme.v_appKey %>",
         path: window.location.pathname,
         placeholder: "你是我一生只会遇见一次的惊喜 ...",
+        serverURLs: "https://6pqctkhf.api.lncldglobal.com",
         visitor: true
       })
   }
