--- a/themes/Sakura/layout/_partial/head.ejs
+++ b/themes/Sakura/layout/_partial/head.ejs
@@ -35,6 +35,8 @@
   <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/css/jquery.fancybox.min.css" media="all">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/css/sharejs.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/amtoaer/blogcdn@master/css/outdate.css">
+  <!-- require APlayer -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
   <script src="//cdn.jsdelivr.net/npm/moment@2.28.0/moment.min.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/artitalk"></script>
   <script>
